<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_black"
        android:title="@string/title_home" />

    <item
        android:id="@+id/catalogFragment"
        android:icon="@drawable/ic_catalog_black"
        android:title="@string/title_catalog" />

    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_cart_black"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/promotionsFragment"
        android:icon="@drawable/ic_promotions_black"
        android:title="@string/title_promotions"/>

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile_black"
        android:title="@string/title_profile"/>

</menu>